Progress with Ratio measures